 /* $Id: ChangeLog,v 1.888 2000-04-15 12:44:07 sandervl Exp $ */

 2000-04-15: Sander van Leeuwen <sandervl@xs4all.nl>
	- WSOCK32:  Async select fix (VPBuddy can connect again)
	- KERNEL32: Remove ending backslash in FindFirstFileA (if present)
                    (otherwise DosFindFirst fails)
                    Fixed flushing of file maps (wrong VirtualQuery parameter)
                    Path search fix for dlls

 2000-04-14: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Hardcoded system & windows dir
		    system dir  = kernel32 dir
		    windows dir = kernel32 dir\win
                    Fixed dll attach for pe2lx/win32k & lx Odin executables
                    Command line fixes (now starts with full path of exe)
                    Search for dlls in:
		    1) current dir
                    2) win32 exe dir
                    3) windows system dir
                    4) path
                    Append backslash if GetFileAttributes fails (and it's missing
                    from the filename)
        - PELDR/KERNEL32: Fixed starting of executable with spaces in name
                          (might not be 100% complete yet)
                          Fixes for relative path of executable
	- ODIN.INI.TXT: Removed DIRECTORIES section

 2000-04-13: Sander van Leeuwen <sandervl@xs4all.nl>
        - USER32: Zero thread message structure before dispatching it
                  Prevents app from sending the same posted message twice
                  (causing problems when freeing the postmsg struct)
                  (fixes RealPlayer 7 Update service)
	- CRTDLL: Fixed div (result must be returned in edx:eax)
	- PE:     Check PATH for executable file

 2000-04-12: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: listview: completed most version 4 features

 2000-04-10: Sander van Leeuwen <sandervl@xs4all.nl>
        - USER32: Added support for topmost windows

 2000-04-10: David Raison <djr@lemur.co.uk>